# phonebook-app

./: .gitignore  db.sqlite3  notes.txt  pyproject.toml
phonebook/: admin.py  forms.py  models.py  settings.py  urls.py  views.py
phonebook/management/commands/: populate_db.py
phonebook/migrations/: 0001_initial.py  0002_initial.py
phonebook/templates/phonebook/: about.html  create_user_contact_form.html  login.html  phonebook_detail.html  phonebook_homepage.html  phonebook_homepage2.html  register.html  update_contact.html
static/css/: about.css
static/js/: ajax_modal.js  datetime-moment.min.js  export.js  jquery.formset.js  moment-with-locales.min.js  paginate.js  search_script.js  xlsx.full.min.js
static/js/smart_admin/css/: app.bundle.min.css  vendors.bundle.min.css
static/js/smart_admin/css/datagrid/datatables/: datatables.bundle.min.css
static/js/smart_admin/css/formplugins/bootstrap-daterangepicker/: bootstrap-daterangepicker.min.css
static/js/smart_admin/js/: app.bundle.min.js
static/smart_admin/css/datagrid/datatables/: datatables.bundle.css  datatables.bundle.css.map
static/smart_admin/css/formplugins/bootstrap-colorpicker/: bootstrap-colorpicker.css
static/smart_admin/css/formplugins/select2/: select2.bundle.min.css
static/smart_admin/css/notifications/toastr/: toastr.min.css
static/smart_admin/css/skins/: skin-master.min.css
static/smart_admin/css/themes/: cust-theme-3.min.css
static/smart_admin/js/: vendors.bundle.min.js
static/templates/: base.html  main_nav.html
user/: models.py
user/migrations/: 0001_initial.py
(+2 files in other folders)
